--- a/Save.html
+++ b/Save.html
@@ -10,7 +10,7 @@
         <div class="nav">
             <div class="logo"><image src="logo.png" alt="logo" width="50" height="50"></image></div>
             <ul class="links">
-                <li><a href="index.html" class="actionbutton">Home</a></li>
+                <li><a href="Home.html" class="actionbutton">Home</a></li>
                 <li><a href="Explore.html"class="actionbutton">Explore</a></li>
                 <li><a href="Save.html"class="active">Save</a></li>
             </ul>
