--- a/regis.html
+++ b/regis.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!--Sign Up-->
-    <a href="indexprjct.html" class="custom-button">
+    <a href="index.html" class="custom-button">
       <i class="fas fa-times"></i> 
       </a>       
       </div> 
