--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
         <span class="garis"></span>
       </a>
       <ul>
-        <li class="active"><a href="indexprjct.html">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li class="active"><a href="team.html">Team</a></li>
         <nav class="navbar">
           <ul class="nav-links">
